infra.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Create EC2 for Jenkins automation lab",

  "Resources": {

    "ChaosSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "allow ports for order payment jenkins",
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": 8080, "ToPort": 8080, "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": 3000, "ToPort": 3000, "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": 3001, "ToPort": 3001, "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": 22,   "ToPort": 22,   "CidrIp": "0.0.0.0/0" }
        ]
      }
    },

    "ChaosLabEC2": {
      "Type": "AWS::EC2::Instance",
      "DependsOn": ["ChaosSecurityGroup"],
      "Properties": {
        "ImageId": "ami-053b0d53c279acc90",
        "InstanceType": "t2.micro",

        "KeyName": "chaos-keypair",

        "SecurityGroupIds": [
          { "Ref": "ChaosSecurityGroup" }
        ],

        "UserData": {
          "Fn::Base64": "#!/bin/bash\napt update -y\nmkdir -p /home/ubuntu\nchmod 777 /home/ubuntu\n"
        },

        "Tags": [
          { "Key": "Name", "Value": "chaos-lab" }
        ]
      }
    }

  }
}
